--- a/templates/base.html
+++ b/templates/base.html
@@ -1361,7 +1361,7 @@
             </div>
             
             <!-- Menu Mobile Toggle -->
-            <div class="mobile-menu-toggle d-none">
+            <div class="mobile-menu-toggle">
                 <button class="btn btn-primary btn-icon" id="mobileMenuToggle">
                     <i class="fas fa-bars"></i>
                 </button>
@@ -1512,7 +1512,7 @@
             <!-- Top Navbar -->
             <nav class="top-navbar">
                 <div class="navbar-left">
-                    <div class="mobile-menu-toggle d-none">
+                    <div class="mobile-menu-toggle">
                         <button class="btn btn-primary btn-icon" id="mobileMenuToggle">
                             <i class="fas fa-bars"></i>
                         </button>
