--- a/templates/base.html
+++ b/templates/base.html
@@ -1362,7 +1362,7 @@
             
             <!-- Menu Mobile Toggle -->
             <div class="mobile-menu-toggle">
-                <button class="btn btn-primary btn-icon" id="mobileMenuToggle">
+                <button class="btn btn-primary btn-icon mobile-menu-toggle-btn" type="button">
                     <i class="fas fa-bars"></i>
                 </button>
             </div>
@@ -1513,7 +1513,7 @@
             <nav class="top-navbar">
                 <div class="navbar-left">
                     <div class="mobile-menu-toggle">
-                        <button class="btn btn-primary btn-icon" id="mobileMenuToggle">
+                        <button class="btn btn-primary btn-icon mobile-menu-toggle-btn" type="button">
                             <i class="fas fa-bars"></i>
                         </button>
                     </div>
@@ -1726,7 +1726,7 @@
             const sidebar = $('#sidebar');
             const mainContent = $('#mainContent');
             const sidebarToggle = $('#sidebarToggle');
-            const mobileMenuToggle = $('#mobileMenuToggle');
+            const mobileMenuToggle = $('.mobile-menu-toggle-btn');
             
             // Toggle desktop sidebar
             sidebarToggle.click(function() {
@@ -1740,7 +1740,7 @@
             });
             
             // Toggle mobile sidebar
-            mobileMenuToggle.click(function() {
+            mobileMenuToggle.on('click', function() {
                 sidebar.toggleClass('mobile-open');
             });
             
