Ocultar menu mobile2 no desktop

--- a/templates/base.html
+++ b/templates/base.html
@@ -1397,12 +1397,7 @@
                 <i class="fas fa-chevron-left"></i>
             </div>
             
-            <!-- Menu Mobile Toggle -->
-            <div class="mobile-menu-toggle">
-                <button class="btn btn-primary btn-icon mobile-menu-toggle-btn" type="button" data-sidebar-toggle="mobile">
-                    <i class="fas fa-bars"></i>
-                </button>
-            </div>
+            <!-- Menu Mobile Toggle (moved to top navbar only) -->
             
             <!-- Info do Caixa -->
             {% if session.get('user_id') %}
