Ocultar botões de menu no desktop

--- a/templates/base.html
+++ b/templates/base.html
@@ -1342,7 +1342,8 @@
 
         @media (min-width: 993px) {
             .mobile-menu-toggle,
-            .sidebar-overlay {
+            .sidebar-overlay,
+            .sidebar-toggle {
                 display: none !important;
             }
         }
