Remover hamburguer do desktop

--- a/templates/base.html
+++ b/templates/base.html
@@ -1338,12 +1338,15 @@
                 opacity: 1;
                 pointer-events: auto;
             }
+
+            .sidebar-toggle {
+                display: none !important;
+            }
         }
 
         @media (min-width: 993px) {
             .mobile-menu-toggle,
-            .sidebar-overlay,
-            .sidebar-toggle {
+            .sidebar-overlay {
                 display: none !important;
             }
         }
